--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,7 @@
         android:theme="@style/Theme.PasswordGenerator"
         tools:targetApi="31">
         <activity
-            android:name=".UpdateActivity"
+            android:name=".UpdatePassActivity"
             android:exported="false" />
         <activity
             android:name=".AddPasswordActivity"
